--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
   </head>
   <body>
     <h1>Multiple Choice Quiz</h1>
+    <div class="">
+      <h2>The first question of the quiz is this?</h2>
+        <ul>
+          <li>Answer 1</li>
+          <li>Answer 2</li>
+          <li>Answer 3</li>
+          <li>Answer 4</li>
+        </ul>
+    </div>
 
     <script type="text/javascript" src="main.js"></script>
   </body>
