made and styled template for each question

--- a/index.html
+++ b/index.html
@@ -4,18 +4,24 @@
     <meta charset="utf-8">
     <title>Multiple Choice Quiz</title>
     <link rel="stylesheet" href="style.css">
+    <script type="text/javascript" src="jquery.js"></script>
   </head>
   <body>
-    <h1>Multiple Choice Quiz</h1>
-    <div class="">
-      <h2>The first question of the quiz is this?</h2>
-        <ul>
-          <li>Answer 1</li>
-          <li>Answer 2</li>
-          <li>Answer 3</li>
-          <li>Answer 4</li>
-        </ul>
-    </div>
+
+    <h1>Capital Cities Quiz</h1>
+<!-- question 1 -->
+        <table>
+            <thead>
+              <h2>What is the capital of the Republic of Ireland?</h2>
+            </thead>
+            <tr>
+              <td class="guess">Belfast</td>
+              <td class="guess">Cork</td>
+              <td class="guess">Dublin</td>
+              <td class="guess">Galway</td>
+            </tr>
+        </table>
+
 
     <script type="text/javascript" src="main.js"></script>
   </body>
