jquery working for when player select correct answer

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
               <h2>What is the capital of the Republic of Ireland?</h2>
             </thead>
             <tr>
-              <td class="guess">Belfast</td>
-              <td class="guess">Cork</td>
-              <td class="guess">Dublin</td>
-              <td class="guess">Galway</td>
+              <td class="incorrect guess">Belfast</td>
+              <td class="incorrect guess">Cork</td>
+              <td class="correct guess">Dublin</td>
+              <td class="incorrect guess">Galway</td>
             </tr>
         </table>
 
