added all five questions in

--- a/index.html
+++ b/index.html
@@ -10,18 +10,69 @@
 
     <h1>Capital Cities Quiz</h1>
 <!-- question 1 -->
-        <table>
-            <thead>
-              <h2>What is the capital of the Republic of Ireland?</h2>
-            </thead>
-            <tr>
-              <td class="incorrect guess">Belfast</td>
-              <td class="incorrect guess">Cork</td>
-              <td class="correct guess">Dublin</td>
-              <td class="incorrect guess">Galway</td>
-            </tr>
-        </table>
+  <table>
+    <thead>
+      <h2>What is the capital of the Republic of Ireland?</h2>
+    </thead>
+      <tr>
+        <td class="incorrect guess">Belfast</td>
+        <td class="incorrect guess">Cork</td>
+        <td class="correct guess">Dublin</td>
+        <td class="incorrect guess">Galway</td>
+      </tr>
+  </table>
 
+<!-- question 2 -->
+  <table>
+    <thead>
+      <h2>What is the capital of Australia?</h2>
+    </thead>
+      <tr>
+        <td class="incorrect guess">Melbourne</td>
+        <td class="correct guess">Canberra</td>
+        <td class="incorrect guess">Sydney</td>
+        <td class="incorrect guess">Perth</td>
+      </tr>
+    </table>
+
+<!-- question 3 -->
+  <table>
+    <thead>
+      <h2>What is the capital of Canada?</h2>
+    </thead>
+    <tr>
+      <td class="incorrect guess">Vancouver</td>
+      <td class="incorrect guess">Toronto</td>
+      <td class="incorrect guess">Montreal</td>
+      <td class="correct guess">Ottawa</td>
+    </tr>
+  </table>
+
+<!-- question 4 -->
+  <table>
+    <thead>
+      <h2>What is the capital of Spain?</h2>
+    </thead>
+      <tr>
+        <td class="incorrect guess">Barcelona</td>
+        <td class="correct guess">Madrid</td>
+        <td class="incorrect guess">Valencia</td>
+        <td class="incorrect guess">Seville</td>
+      </tr>
+  </table>
+
+<!-- question 5 -->
+  <table>
+    <thead>
+      <h2>What is the capital of Brazil?</h2>
+    </thead>
+      <tr>
+        <td class="correct guess">Brasilia</td>
+        <td class="incorrect guess">Rio de Janeiro</td>
+        <td class="incorrect guess">Sao Paulo</td>
+        <td class="incorrect guess">Salvador</td>
+      </tr>
+    </table>
 
     <script type="text/javascript" src="main.js"></script>
   </body>
