added scoreboard to keep track of players score

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
   </head>
   <body>
 
+<!--player score-->
+  <div id="scoreboard">
+    <h3>Your score<br><span id="playerScore">0</span>/5</h3>
+  </div>
+
     <h1>Capital Cities Quiz</h1>
 <!-- question 1 -->
   <table>
