added try again button

--- a/index.html
+++ b/index.html
@@ -78,6 +78,10 @@
         <td class="incorrect guess">Salvador</td>
       </tr>
     </table>
+<!--try again button-->
+  <div id="tryAgain">
+    <a href="javascript:location.reload(true)"><h3>Try again</h3></a>
+  </div>
 
     <script type="text/javascript" src="main.js"></script>
   </body>
